fix : 포트폴리오 S3 로직 재구축