@@ -12,41 +12,39 @@ import CamNecT.CamNecT_Server.domain.portfolio.repository.PortfolioAssetReposito
 import CamNecT.CamNecT_Server.domain.portfolio.repository.PortfolioRepository;
 import CamNecT.CamNecT_Server.global.common.exception.CustomException;
 import CamNecT.CamNecT_Server.global.common.response.errorcode.bydomains.UserErrorCode;
-import CamNecT.CamNecT_Server.global.common.service.GlobalPresignMethods;
-import CamNecT.CamNecT_Server.global.storage.model.UploadPurpose;
-import CamNecT.CamNecT_Server.global.storage.model.UploadRefType;
 import CamNecT.CamNecT_Server.global.storage.model.UploadTicket;
 import CamNecT.CamNecT_Server.global.storage.repository.UploadTicketRepository;
 import CamNecT.CamNecT_Server.global.storage.service.PresignEngine;
+import CamNecT.CamNecT_Server.global.storage.service.PublicUrlIssuer;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PortfolioService {
+    private static final String DEFAULT_THUMB = "기본이미지";
 
     private final PortfolioRepository portfolioRepository;
     private final PortfolioAssetRepository portfolioAssetRepository;
+    private final UploadTicketRepository uploadTicketRepository;
 
     private final PresignEngine presignEngine;
-    private final UploadTicketRepository ticketRepo;
-
-    private final GlobalPresignMethods globalPresignMethods;
+    private final PublicUrlIssuer publicUrlIssuer;
+    private final PortfolioAttachmentService portfolioAttachmentService;
 
     public PortfolioResponse<List<PortfolioPreviewResponse>> portfolioPreview(Long userId, Long portfolioUserId) {
-        List<PortfolioPreviewResponse> rows = portfolioRepository.findPreviewsByUserId(userId);
+        List<PortfolioPreviewResponse> rows = portfolioRepository.findPreviewsByUserId(portfolioUserId);
 
         List<PortfolioPreviewResponse> resultList =  rows.stream()
                 .map(r -> {
                     String key = r.thumbnailUrl(); // DB에 저장된 건 key
-                    String url = presignOrNull(key, null, null);
+                    String url = cdnOrNull(key);
                     return new PortfolioPreviewResponse(r.portfolioId(), r.title(), url, r.isPublic(), r.isFavorite());
                 })
                 .toList();
@@ -59,40 +57,58 @@ public class PortfolioService {
         PortfolioProject portfolio = portfolioRepository.findById(portfolioId)
                 .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
 
+        if (!Objects.equals(portfolio.getUserId(), portfolioUserId)) throw new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND);
+
         boolean isMine = Objects.equals(userId, portfolio.getUserId());
 
-        String thumbKey = portfolio.getThumbnailUrl();
-        String thumbUrl = presignOrNull(thumbKey, "thumbnail", null);
+        String thumbUrl = cdnOrNull(portfolio.getThumbnailUrl());
         PortfolioProjectDto projectDto = PortfolioProjectDto.from(portfolio, thumbUrl);
 
         List<PortfolioAsset> assets = portfolioAssetRepository.findAssetsByPortfolioId(portfolioId);
+
+        List<String> keys = assets.stream()
+                .map(PortfolioAsset::getFileKey)
+                .filter(StringUtils::hasText)
+                .distinct()
+                .toList();
+
+        Map<String, UploadTicket> ticketMap = uploadTicketRepository.findAllByStorageKeyIn(keys).stream()
+                .collect(Collectors.toMap(UploadTicket::getStorageKey, t -> t));
+
+        Map<String, String> urlMap = new HashMap<>();
+        for (String key : keys) {
+            UploadTicket t = ticketMap.get(key);
+            String filename = (t == null) ? null : t.getOriginalFilename();
+            String contentType = (t == null) ? null : t.getContentType();
+
+            urlMap.put(key, presignEngine.presignDownload(key, filename, contentType).downloadUrl());
+        }
 
         List<PortfolioAssetView> views = assets.stream()
                 .map(a -> new PortfolioAssetView(
                         a.getAssetId(),
                         a.getType(),
-                        a.getFileUrl(),
-                        presignOrNull(a.getFileUrl(), "asset", a.getType()),
+                        a.getFileKey(),
+                        urlMap.get(a.getFileKey()),
                         a.getSortOrder(),
                         a.getCreatedAt()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
-        return PortfolioResponse.of(userId.equals(portfolioUserId), new PortfolioDetailResponse(isMine, projectDto, views));
+        return PortfolioResponse.of(isMine, new PortfolioDetailResponse(isMine, projectDto, views));
     }
 
     @Transactional
     public PortfolioPreviewResponse create(Long userId, Long portfolioUserId, PortfolioRequest request) {
 
-        if(!userId.equals(portfolioUserId))
-            throw new CustomException(UserErrorCode.PORTFOLIO_FORBIDDEN);
+        if (!Objects.equals(userId, portfolioUserId)) throw new CustomException(UserErrorCode.PORTFOLIO_FORBIDDEN);
 
         //요청에 따라 PortfolioProject 생성
         PortfolioProject project = PortfolioProject.builder()
                 .userId(userId)
                 .title(request.projectTitle())
                 .description(request.description())
-                .thumbnailUrl("기본이미지")
+                .thumbnailUrl(DEFAULT_THUMB)
                 .startDate(request.startedAt())
                 .endDate(request.endedAt())
                 .review(request.review())
@@ -103,54 +119,17 @@ public class PortfolioService {
 
         PortfolioProject saved = portfolioRepository.save(project);
 
-        String finalThumbPrefix = "portfolio/user-" + userId + "/portfolio-" + saved.getPortfolioId() + "/thumbnail";
-        String finalAssetPrefix = "portfolio/user-" + userId + "/portfolio-" + saved.getPortfolioId() + "/assets";
-
-        // thumbnail
-        if (StringUtils.hasText(request.thumbnailKey())) {
-            String finalKey = presignEngine.consume(
-                    userId,
-                    UploadPurpose.PORTFOLIO_ATTACHMENT,
-                    UploadRefType.PORTFOLIO,
-                    saved.getPortfolioId(),
-                    request.thumbnailKey(),
-                    finalThumbPrefix
-            );
-            saved.updateThumbnail(finalKey);
-        }
-
-        // attachments
-        List<String> keys = (request.attachmentKeys() == null) ? List.of() : request.attachmentKeys();
-        int order = 1;
-
-        for (String tempKey : keys) {
-            if (!StringUtils.hasText(tempKey)) continue;
-
-            String finalKey = presignEngine.consume(
-                    userId,
-                    UploadPurpose.PORTFOLIO_ATTACHMENT,
-                    UploadRefType.PORTFOLIO,
-                    saved.getPortfolioId(),
-                    tempKey,
-                    finalAssetPrefix
-            );
-
-            UploadTicket t = ticketRepo.findByStorageKey(finalKey)
-                    .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
-
-            saved.getAssets().add(PortfolioAsset.builder()
-                    .portfolioProject(saved)
-                    .type(t.getContentType())
-                    .fileUrl(finalKey)
-                    .sortOrder(order++)
-                    .createdAt(LocalDateTime.now())
-                    .build());
-        }
+        portfolioAttachmentService.applyOnCreate(
+                saved,
+                userId,
+                request.thumbnailKey(),
+                request.attachmentKeys()
+        );
 
         return new PortfolioPreviewResponse(
                 saved.getPortfolioId(),
                 saved.getTitle(),
-                presignOrNull(saved.getThumbnailUrl(), "thumbnail", null),
+                cdnOrNull(saved.getThumbnailUrl()), // CDN
                 saved.isPublic(),
                 saved.isFavorite()
         );
@@ -161,35 +140,7 @@ public class PortfolioService {
         PortfolioProject project = portfolioRepository.findById(portfolioId)
                 .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
 
-        // 권한 체크
-        if (!project.getUserId().equals(userId)) {
-            throw new CustomException(UserErrorCode.PORTFOLIO_FORBIDDEN);
-        }
-
-        String finalThumbPrefix = "portfolio/user-" + userId + "/portfolio-" + project.getPortfolioId() + "/thumbnail";
-        String finalAssetPrefix = "portfolio/user-" + userId + "/portfolio-" + project.getPortfolioId() + "/assets";
-
-
-        Set<String> deleteAfterCommit = new HashSet<>();
-
-        // thumbnail 교체
-        if (StringUtils.hasText(request.thumbnailKey())
-                && !Objects.equals(request.thumbnailKey(), project.getThumbnailUrl())) {
-
-            if (StringUtils.hasText(project.getThumbnailUrl()) && !"기본이미지".equals(project.getThumbnailUrl())) {
-                deleteAfterCommit.add(project.getThumbnailUrl());
-            }
-
-            String finalKey = presignEngine.consume(
-                    userId,
-                    UploadPurpose.PORTFOLIO_ATTACHMENT,
-                    UploadRefType.PORTFOLIO,
-                    project.getPortfolioId(),
-                    request.thumbnailKey(),
-                    finalThumbPrefix
-            );
-            project.updateThumbnail(finalKey);
-        }
+        validateOwnership(userId, project);
 
         project.updateInfo(
                 request.projectTitle(),
@@ -199,69 +150,33 @@ public class PortfolioService {
                 request.endedAt()
         );
 
-        // attachments 교체(요청이 들어온 경우만)
-        if (request.attachmentKeys() != null) {
-            Map<String, PortfolioAsset> currentByKey = project.getAssets().stream()
-                    .filter(a -> StringUtils.hasText(a.getFileUrl()))
-                    .collect(Collectors.toMap(PortfolioAsset::getFileUrl, a -> a));
-
-            Set<String> keepKeys = new HashSet<>();
-
-            LinkedHashSet<String> reqKeys = new LinkedHashSet<>();
-            for (String k : request.attachmentKeys()) {
-                if (StringUtils.hasText(k)) reqKeys.add(k);
-            }
-
-            int order = 1;
-            for (String k : reqKeys) {
-                PortfolioAsset existing = currentByKey.get(k);
-                if (existing != null) {
-                    existing.updateSortOrder(order++);
-                    keepKeys.add(existing.getFileUrl());
-                    continue;
-                }
-
-                String finalKey = presignEngine.consume(
-                        userId,
-                        UploadPurpose.PORTFOLIO_ATTACHMENT,
-                        UploadRefType.PORTFOLIO,
-                        project.getPortfolioId(),
-                        k,
-                        finalAssetPrefix
-                );
-
-                UploadTicket t = ticketRepo.findByStorageKey(finalKey)
-                        .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
-
-                project.getAssets().add(PortfolioAsset.builder()
-                        .portfolioProject(project)
-                        .type(t.getContentType())
-                        .fileUrl(finalKey)
-                        .sortOrder(order++)
-                        .createdAt(LocalDateTime.now())
-                        .build());
-
-                keepKeys.add(finalKey);
-            }
-            for (String oldKey : currentByKey.keySet()) {
-                if (!keepKeys.contains(oldKey)) deleteAfterCommit.add(oldKey);
-            }
-
-            project.getAssets().removeIf(a -> {
-                String k = a.getFileUrl();
-                return StringUtils.hasText(k) && !keepKeys.contains(k);
-            });
-
-        }
-        globalPresignMethods.deleteAfterCommit(deleteAfterCommit);
+        // consume/정렬/삭제예약은 AttachmentService로 위임
+        portfolioAttachmentService.applyOnUpdate(
+                project,
+                userId,
+                request.thumbnailKey(),
+                request.attachmentKeys()
+        );
 
         return new PortfolioPreviewResponse(
                 project.getPortfolioId(),
                 project.getTitle(),
-                presignOrNull(project.getThumbnailUrl(), "thumbnail", null),
+                cdnOrNull(project.getThumbnailUrl()), // CDN
                 project.isPublic(),
                 project.isFavorite()
         );
+    }
+
+    @Transactional
+    public void delete(Long userId, Long portfolioId) {
+        PortfolioProject project = portfolioRepository.findById(portfolioId)
+                .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
+
+        validateOwnership(userId, project);
+
+        portfolioAttachmentService.deleteAllFilesAfterCommit(project);
+
+        portfolioRepository.delete(project);
     }
 
     @Transactional
@@ -292,37 +207,12 @@ public class PortfolioService {
         }
     }
 
-    @Transactional
-    public void delete(Long userId, Long portfolioId) {
-        PortfolioProject project = portfolioRepository.findById(portfolioId)
-                .orElseThrow(() -> new CustomException(UserErrorCode.PORTFOLIO_NOT_FOUND));
-
-        if (!project.getUserId().equals(userId)) {
-            throw new CustomException(UserErrorCode.PORTFOLIO_FORBIDDEN);
-        }
-
-        Set<String> deleteAfterCommit = new HashSet<>();
-
-        if (StringUtils.hasText(project.getThumbnailUrl()) && !"기본이미지".equals(project.getThumbnailUrl())) {
-            deleteAfterCommit.add(project.getThumbnailUrl());
-        }
-
-        project.getAssets().forEach(a -> {
-            if (StringUtils.hasText(a.getFileUrl())) deleteAfterCommit.add(a.getFileUrl());
-        });
-
-        portfolioRepository.delete(project);
-
-        globalPresignMethods.deleteAfterCommit(deleteAfterCommit);
-    }
-
-    private String presignOrNull(String key, String filename, String contentType) {
-        if (!StringUtils.hasText(key) || "기본이미지".equals(key)) return null;
+    private String cdnOrNull(String key) {
+        if (!StringUtils.hasText(key) || DEFAULT_THUMB.equals(key)) return null;
         try {
-            return presignEngine.presignDownload(key, filename, contentType).downloadUrl();
+            return publicUrlIssuer.issuePublicUrl(key);
         } catch (Exception e) {
             return null;
         }
     }
-
 }
